mutants.out.old/log/src__proto__single__ent__progress.rs_line_44_col_9.log

*** src/proto/single/ent/progress.rs:44:9: replace ProgressUpdate::set -> ProgressUpdate with Default::default()

*** mutation diff:
--- src/proto/single/ent/progress.rs
+++ replace ProgressUpdate::set -> ProgressUpdate with Default::default()
@@ -36,17 +36,17 @@
     #[serde(skip_serializing_if = "Option::is_none")]
     #[builder(default = "None")]
     pub reserve_until: Option<DateTime<Utc>>,
 }
 
 impl ProgressUpdate {
     /// Create an instance of `ProgressUpdate` for the job with this ID specifying its completion percentage.
     pub fn set(jid: JobId, percent: u8) -> ProgressUpdate {
-        ProgressUpdate::builder(jid).percent(percent).build()
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// Create a new instance of `ProgressUpdateBuilder` with job ID already set.
     ///
     /// Equivalent to creating a [new](struct.ProgressUpdateBuilder.html#method.new)
     /// `ProgressUpdateBuilder`.
     pub fn builder(jid: JobId) -> ProgressUpdateBuilder {
         ProgressUpdateBuilder::new(jid)


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `ProgressUpdate: Default` is not satisfied
  --> src/proto/single/ent/progress.rs:44:9
   |
44 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ProgressUpdate`
   |
help: consider annotating `ProgressUpdate` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | pub struct ProgressUpdate {
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
